--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-/* Reset and body styles */
 * {
     margin: 0;
     padding: 0;
@@ -15,23 +14,20 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-/* Container for the flip card */
 .container {
     perspective: 1000px;
 }
 
-/* Flip card styles */
 .flip-card {
     width: 300px;
     height: 400px;
 }
 
-/* Heading styling for Login and Register */
 .flip-card-front h2,
 .flip-card-back h2 {
-    font-size: 1.8em; /* Increase font size for visibility */
+    font-size: 1.8em; 
     margin-bottom: 20px;
-    color: white    ; /* Optional: Adjust color if desired */
+    color: white    ; 
 }
 
 .flip-card-inner {
@@ -47,12 +43,12 @@ body {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background-color: rgba(255, 255, 255, 0.2); /* Slightly transparent white */
-    backdrop-filter: blur(10px); /* Adds blur for a frosted effect */
+    background-color: rgba(255, 255, 255, 0.2); 
+    backdrop-filter: blur(10px); 
     padding: 40px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    color: #fff; /* White text to contrast with frosted background */
+    color: #fff;
 }
 
 .flip-card-front {
@@ -74,7 +70,6 @@ body {
     transform: rotateY(180deg);
 }
 
-/* Icon and input field styling */
 .input-icon {
     position: relative;
     margin-bottom: 10px;
@@ -82,14 +77,13 @@ body {
 
 .input-icon input {
     width: 100%;
-    padding: 10px 10px 10px 35px; /* Space for icon */
+    padding: 10px 10px 10px 35px; 
     border-radius: 5px;
     border: 1px solid #ddd;
     font-size: 16px;
     outline: none;
 }
 
-/* Style for icon inside input field */
 .input-icon i {
     position: absolute;
     left: 10px;
@@ -99,7 +93,7 @@ body {
     transition: opacity 0.2s ease;
 }
 
-/* Hide icon and placeholder on focus or when text is entered */
+
 .input-icon input:focus::placeholder,
 .input-icon input:not(:placeholder-shown)::placeholder,
 .input-icon input:focus + i,
@@ -108,7 +102,6 @@ body {
 }
 
 
-/* Button styling */
 button {
     width: 100%;
     padding: 10px;
@@ -138,7 +131,7 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Modal styling */
+
 .modal {
     display: none;
     position: fixed;
